--- a/src/app/login-page.component.css
+++ b/src/app/login-page.component.css
@@ -21,7 +21,7 @@
   position: relative;
   width: 100%;
   display: block;
-  background: dodgerblue;
+  background: #33a6cc;
   padding: 15px;
   color: #fff;
   font-size: 25px;
@@ -70,26 +70,98 @@
   outline: 0;
   border-color: #FF7052;
 }
-.submit {
-  width: 45px;
-  height: 45px;
-  display: block;
-  margin: 0 auto -15px auto;
-  background: #fff;
-  border-radius: 100%;
-  border: 1px solid dodgerblue;
-  color: dodgerblue;
-  font-size: 24px;
+/**************************
+  DEFAULT BOOTSTRAP STYLES
+**************************/
+
+.btn {
+  display: inline-block;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
   cursor: pointer;
-  box-shadow: 0px 0px 0px 7px #fff;
-  transition: 0.2s ease-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  padding: 10px 16px;
 }
-.submit:hover,
-.submit:focus {
-  background: dodgerblue;
+
+.btn-lg {
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 6px;
+}
+
+.btn-primary {
   color: #fff;
-  outline: 0;
+  background-color: #428bca;
+  border-color: #357ebd;
 }
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #3276b1;
+  border-color: #285e8e;
+}
+
+/***********************
+  SHARP BUTTONS
+************************/
+.sharp {
+  border-radius:0;
+}
+.submit {
+  float: right;
+  border-radius: 10px;
+  font-weight: lighter;
+  font-size: 12px;
+  padding: 10px 20px !important;
+  margin-right: 30px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+/***********************
+  CUSTON BTN VALUES
+************************/
+
+.btn {
+  padding: 14px 24px;
+  border: 0 none;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.btn:focus, .btn:active:focus, .btn.active:focus {
+  outline: 0 none;
+}
+
+.btn-primary {
+  background: #0099cc;
+  color: #ffffff;
+}
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+  background: #33a6cc;
+}
+.btn-primary:active, .btn-primary.active {
+  background: #007299;
+  box-shadow: none;
+}
+
+
+
 .feedback {
   position: absolute;
   bottom: -70px;
@@ -120,7 +192,6 @@
     color: orangered;
     font: bold;
     margin-left: 50px;
-    margin-bottom: 20px;
 }
 .link{
    font-style: italic;
@@ -151,4 +222,7 @@ font-style: italic;
 }
 .header-wrapper{
     display: flex;
+}
+.arrow{
+  background-image: url(app/shared/images/arrow.png);
 }
